<resources>
    <string name="app_name">Minter Info App</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="please_wait">Пожалуйста, подождите…</string>
    <string name="enter_wallet_address">Введите адрес кошелька</string>
    <string name="enter">Войти</string>
    <string name="invalid_wallet_address">Невалидный адрес кошелька</string>
    <string name="error_check_inet_connection">Ошибка, проверьте интернет соединение</string>
    <string name="wallet">Кошелёк</string>
    <string name="validators">Валидаторы</string>
    <string name="status">Статус сети</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_get_validators">Ошибка получения списка валидаторов</string>
    <string name="elon_musk">elon musk</string>
    <string name="error_get_status_info">Ошибка получения информации сети</string>
    <string name="per_bip">per BIP</string>
    <string name="market_cap">Market Cap</string>
    <string name="last_block">Last Block</string>
    <string name="s">s</string>
    <string name="transactions">transactions</string>
    <string name="change_wallet_address">Смена адреса кошелька</string>
    <string name="are_you_sure_to_change_wallet_address">Вы уверены, что хотите сменить адрес кошелька?</string>
    <string name="donation">Донат</string>
    <string name="copy">Копировать адрес</string>
    <string name="donate_message">Данное приложение разрабатывается энтузиастами в свободное время. Вы можете поддержать разработчиков, отправив пожертвование на данный BIP кошелек: \nMx69ed0a8c95b77d63a442c48f419b5f01aad26006</string>
    <string name="address_copied">Адрес скопирован</string>
    <string name="site_copied">Сайт скопирован</string>
    <string name="error_receiving_wallet_info">Ошибка получения информации о кошельке</string>
    <string name="my_coins">Мои монеты</string>
    <string name="delegated_stakes">Делегированные стейки</string>
</resources>
